--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="app" class="container">
 
     <div class="logo">
-      <h1>{{title}}</h1>
+      <h1>{{title}} <i class="fa-solid fa-bolt"></i></h1>
     </div>
     <div class="input-area">
       <input @keyup.enter="createTask" 
